
* ``DirState`` internals use a little bit less memory. For bzr.dev it
  drops the memory from 1MB down to about 800kB. And replaces a few
  thousand tuples and sets with StaticTuple.  (John Arbash Meinel)

* Inventory entries now consume less memory (on 32-bit Ubuntu file entries
  have dropped from 68 bytes to 40, and directory entries from 120 bytes
  to 48).  (Andrew Bennetts)

* When building new working trees, default to reading from the repository
  rather than the source tree unless explicitly requested. (via
  ``--files-from`` and ``--hardlink`` for ``bzr branch`` and
  ``bzr checkout``. Generally, 2a format repositories extract
  content faster than seeking and reading content from another tree,
  especially in cold-cache situations. (John Arbash Meinel, #607298)

Documentation
*************

* Added a builder/writer sphinx extension that can generate texinfo files. The
  generated files are syntactically correct but the info navigation nodes
  needs more work. (Vincent Ladeuil, #219334)

* First tests defined for sphinx, including a new bzrlib.tests.features.sphinx
  to make the tests conditional.
  (Vincent Ladeuil)

* Fix a lot of references in the docs to the old http://bazaar-vcs.org to
  the new http://bazaar.canonical.com or http://wiki.bazaar.canonical.com
  (John Arbash Meinel, #617503)

API Changes
***********

* Configuration files should now use the ``from_string`` constructor rather
  than the ``file`` parameter of the ``_get_parser`` method. The later has
  been deprecated. ``from_string`` also accept a ``save=True`` parameter to
  have the configuration file immediately written to disk. 
  (Vincent Ladeuil)

* ``IniBaseConfig`` objects should now use the ``from_string`` constructor
  the rather than the ``file`` parameter of the ``_get_parser`` method. The
  later has been deprecated. (Vincent Ladeuil)

* InventoryEntry instances now raise AttributeError if you try to assign